feat: Add web controller - add isDataActual method for checking data from web app
